--- a/stylesheet.css
+++ b/stylesheet.css
@@ -258,7 +258,7 @@ input:checked + .slider:before {
     border-radius: 30px;
     padding: 20px 20px;
     width: 800px;
-    max-width: 95%;
+    max-width: calc(95vw - 40px);
     margin-top: 20px;
 }
 
